namespace-testing.yaml
# namespace-testing.yaml
# This manifest defines a second, separate virtual cluster.

apiVersion: v1
kind: Namespace
metadata:
  name: testing
