webapp-deployment-test.yaml
# webapp-deployment-test.yaml
# This is a separate Deployment that will be created in the 'testing' namespace.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment-test
  # This Deployment is placed in the 'testing' namespace.
  namespace: testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-test
  template:
    metadata:
      labels:
        app: webapp-test
    spec:
      containers:
        - name: nginx-container
          image: nginx
          resources:
            # 'requests' are the minimum resources the Pod needs to be scheduled.
            requests:
              memory: "64Mi" # 64 Mebibytes of memory
              cpu: "250m" # 250 millicores (one quarter of a CPU core)
            # 'limits' are the maximum resources the container is allowed to use.
            limits:
              memory: "128Mi" # 128 Mebibytes of memory
              cpu: "500m" # 500 millicores (half of a CPU core)
